--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+:root{
+  box-sizing: border-box;
+  --primary-color: #1a3944;
+  --secondary-color: #e9232c;
+  --tertiary-color: #fbfafa;
+  --quaternary-color: #205b6d;
+}
+
+html{
+  background-image: linear-gradient(to right, var(--primary-color) , var(--quaternary-color));
+  color: var(--tertiary-color);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
