--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,57 +16,58 @@
 }
 
 .i-left-wrapper {
-	padding: 50px;
-	height: 50%;
+	padding: 2rem;
+	height: 45%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
 .i-intro {
-	font-size: 30px;
+	font-size: 1.3rem;
 	font-weight: normal;
 }
 
 .i-name {
-	font-size: 60px;
+	font-size: 4rem;
 }
 
 .i-title {
-	height: 50px;
+	height: 3rem;
 	overflow: hidden;
-}
-
-.i-title-wrapper {
-	height: 100%;
+  }
+  
+  .i-title-wrapper {
+	height: 3rem;
 	animation: move 10s ease-in-out infinite alternate;
-}
-
-.i-title-item {
-	height: 50px;
-	font-size: 30px;
+  }
+  
+  @keyframes move {
+	25% {
+	  transform: translateY(-3rem);
+	}
+	50% {
+	  transform: translateY(-6rem);
+	}
+	75% {
+	  transform: translateY(-9rem);
+	}
+	100% {
+	  transform: translateY(-12rem);
+	}
+  }
+  
+  .i-title-item {
+	height: 3rem;
+	font-size: 2rem;
 	font-weight: bold;
 	color: #59b256;
 	display: flex;
 	align-items: center;
-}
+  }
+  
 
-@keyframes move {
-	25% {
-		transform: translateY(-50px);
-	}
-	50% {
-		transform: translateY(-100px);
-	}
-	75% {
-		transform: translateY(-150px);
-	}
-	100% {
-		transform: translateY(-200px);
-	}
-}
-
-.i-img {
+/* .i-img {
 	max-width: 30%;
 	height: 30%;
 	object-fit: cover;
@@ -74,7 +75,7 @@
     position: absolute;
     top: 0;
     right: 0;
-}
+} */
 
 .i-bg {
     clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
@@ -87,9 +88,9 @@
 }
 
 .i-scroll {
-    width: 30px;;
-    height: 30px;
+    width: 2rem;;
+    height: 2rem;
     position: absolute;
-    bottom: 20px;
+    bottom: 1rem;
 
 }
