--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,11 +1,21 @@
 .p{
-    width: 50%;
-    height: 50vh;
-    margin: 20px 10px;
+    width: 90%;
+    /* max-width: 40vw; */
+    height: 90%;
     border: 2px solid rgba(243, 242, 242, 0.555);
     border-radius: 12px 12px 0 0;
     overflow: hidden;
-    box-shadow: 6px 6px #194958e1;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.253);
+}
+
+.p-wrap{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: rgba(48, 48, 173, 0.342)!important;
+    padding: 1rem 1.2rem;
+    max-height: 30vw;
+    place-items: center;
+    column-gap: 1rem;
 }
 
 .p-browser{
@@ -28,9 +38,21 @@
 
 .p-img{
     width: 100%;
-    transition: all 20s ease;
+    transition: all 13s ease;
 }
 
 .p:hover .p-img{
     transform: translateY(-100%);
+}
+
+.p-description{
+    height: 90%;
+    width: 90%;
+    max-height: 90%;
+    display: grid;
+    place-items: center;
+}
+
+.p-description p{
+    font-size: 1rem;
 }
