--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -12,13 +12,13 @@
 }
 
 .pl-title{
-    font-size: 50px;
+    font-size: 2.9rem;
     font-weight: 500;
 }
 
 .pl-desc{
     margin: 20px 0px;
-    font-size: 22px;
+    font-size: 1.2rem;
 }
 
 .pl-list{
@@ -26,4 +26,9 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    gap: 1rem;
+}
+
+.pl-list > *{
+    display: grid;
 }
