--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,31 @@
-:root{
-  box-sizing: border-box;
-  --primary-color: #1a3944;
-  --secondary-color: #e9232c;
-  --tertiary-color: #fbfafa;
-  --quaternary-color: #205b6d;
+:root {
+	box-sizing: border-box;
+	--primary-color: #1a3944;
+	--secondary-color: #e9232c;
+	--tertiary-color: #fbfafa;
+	--quaternary-color: #205b6d;
 }
 
-html{
-  background-image: linear-gradient(to right, var(--primary-color) , var(--quaternary-color));
-  color: var(--tertiary-color);
+html {
+	background-image: linear-gradient(
+		to right,
+		var(--primary-color),
+		var(--quaternary-color)
+	);
+	color: var(--tertiary-color);
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+
 }
