added more styling and descriptions to each project. Scrapped the embedded video and just added a youtube link - pretty much done, everything from there is just sugar

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,7 +24,7 @@
 }
 
 .i-intro {
-	font-size: 1.3rem;
+	font-size: 2rem;
 	font-weight: normal;
 }
 
@@ -65,7 +65,9 @@
 	display: flex;
 	align-items: center;
   }
-  
+.i-desc{
+	font-size: 1.4rem;
+}
 
 /* .i-img {
 	max-width: 30%;
