--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -10,12 +10,14 @@
 
 .p-wrap{
     display: grid;
+    border: 1px solid rgba(0, 0, 0, 0.301);
     grid-template-columns: 1fr 1fr;
-    background: rgba(48, 48, 173, 0.342)!important;
+    background: #1e607469;
     padding: 1rem 1.2rem;
     max-height: 30vw;
     place-items: center;
     column-gap: 1rem;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.253);
 }
 
 .p-browser{
@@ -38,21 +40,28 @@
 
 .p-img{
     width: 100%;
-    transition: all 13s ease;
+    transition: all 4s ease;
 }
 
 .p:hover .p-img{
-    transform: translateY(-100%);
+    transform: translateY(-30%);
 }
 
 .p-description{
-    height: 90%;
+    padding: 1rem;
     width: 90%;
     max-height: 90%;
     display: grid;
     place-items: center;
+    background: #1b3a4573;
+}
+
+.p-description h1{
+    display: block;
+    margin-bottom: 1rem;
+    font-size: 2rem;
 }
 
 .p-description p{
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
