--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .i {
 	display: flex;
-	height: 100vh;
+	height: 100%;
+	grid-row: 1;
 }
 
 .i-left {
@@ -12,12 +13,13 @@
 .i-right {
 	flex: 1;
     display: flex;
-    position: relative
+    position: relative;
+	height: 100vh;
 }
 
 .i-left-wrapper {
 	padding: 2rem;
-	height: 45%;
+	height: 42%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
