--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,7 +3,7 @@
     /* max-width: 40vw; */
     height: 90%;
     border: 2px solid rgba(243, 242, 242, 0.555);
-    border-radius: 12px 12px 0 0;
+    border-radius: 9px 9px 0 0;
     overflow: hidden;
     box-shadow: 2px 2px rgba(0, 0, 0, 0.253);
 }
@@ -54,14 +54,18 @@
     display: grid;
     place-items: center;
     background: #1b3a4573;
+    box-shadow:2px 2px rgba(0, 0, 0, 0.26)
 }
 
 .p-description h1{
     display: block;
-    margin-bottom: 1rem;
-    font-size: 2rem;
+    margin-bottom: .5rem;
+    font-size: 1.7rem;
 }
 
 .p-description p{
-    font-size: 1.2rem;
+    display: inline-block;
+    font-size: 1rem;
+    margin: .5rem;
+    margin-bottom: .8rem;
 }
