--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 	--secondary-color: #e9232c;
 	--tertiary-color: #fbfafa;
 	--quaternary-color: #205b6d;
+	
 }
+
+
 
 html {
 	background-image: linear-gradient(
@@ -13,8 +16,12 @@ html {
 		var(--quaternary-color)
 	);
 	color: var(--tertiary-color);
-	padding-bottom: 20vh;
+	padding-bottom: 40vh;
+	display: grid;
+	grid-template-columns: 1fr ;
+	grid-template-rows: 100vh 1fr 1fr 1fr;
 }
+
 
 body {
 	margin: 0;
