changed wording and some text alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -41,7 +41,7 @@
   
   .i-title-wrapper {
 	height: 3rem;
-	animation: move 15s ease-in-out infinite;
+	animation: move 15s ease-in-out infinite alternate;
   }
   
   @keyframes move {
