--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -53,6 +53,7 @@
     max-height: 90%;
     display: grid;
     place-items: center;
+    text-align: left;
     background: #1b3a4573;
     box-shadow:2px 2px rgba(0, 0, 0, 0.26)
 }
